--- a/src/css/tabs/motors.less
+++ b/src/css/tabs/motors.less
@@ -87,19 +87,10 @@
         span {
             margin-left: 0;
         }
-        margin-bottom: 0px;
-        padding: 0.5rem 0;
-        border-bottom: 1px solid var(--surface-500);
-        width: 100%;
         &:last-child {
             border-bottom: none;
             padding-bottom: 0;
             margin-bottom: 0;
-        }
-        .helpicon {
-            margin-right: 7px !important;
-            margin-left: auto !important;
-            float: none;
         }
     }
     .disarm {
